init styling for tweets

--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,13 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:700i&display=swap" rel="stylesheet">
 
+
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new_tweet.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
 
 
   <!-- External JS -->
@@ -37,7 +39,7 @@
     <span>Write new tweet here</span>
   </nav>
   <!-- Header bar-->
-  <header>
+  <header class = "profile">
     <div>
       <img src="/images/profile-hex.png">
     </div>
@@ -55,6 +57,20 @@
         <span class="counter">140</span>
       </form>
     </section>
+    <article class="tweet">
+      <header>
+        
+        <h4>
+        Newton
+        </h4>
+        <h4>@SirIsaac</h4>
+      </header>
+      <p>If I have seen further it is by standing on the shoulders of giants</p>
+      <footer>
+        <p>10 days ago</p>
+        <p>Icons</p>
+      </footer>
+    </article>
   </main>
 
 </body>
