--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:700i&display=swap" rel="stylesheet">
 
+  <!--Font Awesome-->
+  <link rel="stylesheet" href="styles/font-awesome-4.7.0/css/font-awesome.min.css">
+
 
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
@@ -60,15 +63,17 @@
     <article class="tweet">
       <header>
         
-        <h4>
-        Newton
-        </h4>
-        <h4>@SirIsaac</h4>
+        <h4 id="name"> Newton</h4>
+        <h4 id="username">@SirIsaac</h4>
       </header>
       <p>If I have seen further it is by standing on the shoulders of giants</p>
       <footer>
-        <p>10 days ago</p>
-        <p>Icons</p>
+        <p><small>10 days ago</small></p>
+        <p><small>
+          <i class="fa fa-flag" aria-hidden="true"></i>
+          <i class="fa fa-retweet" aria-hidden="true"></i>
+          <i class="fa fa-heart" aria-hidden="true"></i>
+        </small></p>
       </footer>
     </article>
   </main>
