--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,400,700&display=swap" rel="stylesheet">
 
   <!--Font Awesome-->
   <link rel="stylesheet" href="styles/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -53,6 +53,7 @@
 
   <!-- Page-specific (main) content here -->
   <main class="container">
+
     <section class="new-tweet">
       <form action="/tweets" method="POST">
         <textarea name="text" placeholder="What are you humming about?"></textarea>
@@ -60,19 +61,22 @@
         <span class="counter">140</span>
       </form>
     </section>
+
     <article class="tweet">
       <header>
-        
+        <img id="img" src="/images/profile-hex.png">
         <h4 id="name"> Newton</h4>
         <h4 id="username">@SirIsaac</h4>
       </header>
-      <p>If I have seen further it is by standing on the shoulders of giants</p>
+
+      <p id="tweettext">If I have seen further it is by standing on the shoulders of giants</p>
+      
       <footer>
-        <p><small>10 days ago</small></p>
+        <p id="timestamp"><small>10 days ago</small></p>
         <p><small>
-          <i class="fa fa-flag" aria-hidden="true"></i>
-          <i class="fa fa-retweet" aria-hidden="true"></i>
-          <i class="fa fa-heart" aria-hidden="true"></i>
+          <a href="#"><i class="fa fa-flag" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-retweet" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-heart" aria-hidden="true"></i></a>
         </small></p>
       </footer>
     </article>
