--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,10 @@
   <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
   <!-- App JS -->
+  <script type="text/javascript" src="/scripts/moment.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
   <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
-
-
-
+  
 </head>
 
 <body>
@@ -62,14 +61,15 @@
       </form>
     </section>
 
-    <article class="tweet">
+    <div id="tweets-container">
+    <!-- <article class="tweet">
       <header>
-        <img id="img" src="/images/profile-hex.png">
-        <h4 id="name"> Newton</h4>
+        <img id="img" src="https://i.imgur.com/73hZDYK.png">
+        <h4 id="name"> It Me</h4>
         <h4 id="username">@SirIsaac</h4>
       </header>
 
-      <p id="tweettext">If I have seen further it is by standing on the shoulders of giants</p>
+      <p id="tweettext">Testing Tweet</p>
       
       <footer>
         <p id="timestamp"><small>10 days ago</small></p>
@@ -79,7 +79,8 @@
           <a href="#"><i class="fa fa-heart" aria-hidden="true"></i></a>
         </small></p>
       </footer>
-    </article>
+    </article> -->
+    </div>
   </main>
 
 </body>
