--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
   <main class="container">
 
     <section class="new-tweet">
-      <form action="/tweets" method="POST">
+      <form action="/" method="POST">
         <textarea name="text" placeholder="What are you humming about?"></textarea>
         <input type="submit" value="Tweet">
         <span class="counter">140</span>
