add arrow icon and moves down when hovered

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,12 @@
   <!-- Top nav bar (fixed) -->
   <nav>
     <span id="logo">tweeter</span>
-    <span>Write new tweet here</span>
+    <span id="newTweet">Write new tweet here
+      <i class="fa fa-angle-double-down" id="arrowDown" aria-hidden="true">
+      </i>
+    </span>
+    
+
   </nav>
   <!-- Header bar-->
   <header class = "profile">
