--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <!-- Top nav bar (fixed) -->
   <nav>
     <span id="logo">tweeter</span>
-    <span id="writeTweet">Write new tweet here
+    <span id="writeTweet"> Write a tweet
       <i class="fa fa-angle-double-down" id="arrowDown" aria-hidden="true">
       </i>
     </span>
@@ -39,7 +39,7 @@
       <img src="/images/profile-hex.png">
     </div>
     <div>
-      <h2>Your Name</h2>
+      <h2><strong>Your</strong> Name</h2>
     </div>
   </header>
   <!-- Page-specific (main) content here -->
