added some final comments

--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,7 @@
   <!--Scroll up button-->
   
 </body>
+<!--Floating button (I didn't want it attached to flexbox)-->
 <button id="fixedButton" class="hidden"><i class="fa fa-angle-double-up fa-3x" aria-hidden="true"></i>
 </button>
 
