fixed styling for button

--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
   <!-- Top nav bar (fixed) -->
   <nav>
     <span id="logo">tweeter</span>
-    <span id="writeTweet"> Write a tweet
+    <button id="writeTweet"> Write a tweet
       <i class="fa fa-angle-double-down" id="arrowDown" aria-hidden="true">
       </i>
-    </span>
+    </button>
   </nav>
   <!-- Header bar-->
   <header class="profile">
