--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 <head>
   <!-- Meta Information -->
   <title>Tweeter - Home Page</title>
+  <link rel="icon" href="/images/favicon.ico">
+
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
   <!-- External CSS -->
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
@@ -71,7 +73,8 @@
     </div>
   </main>
   <!--Scroll up button-->
-  <button id="fixedButton" class="hidden"><i class="fa fa-angle-double-up fa-3x" aria-hidden="true"></i>
+  <button id="fixedButton" class="hidden">
+    <i class="fa fa-angle-double-up fa-3x" aria-hidden="true"></i>
   </button>
 </body>
 </html>
